--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,7 +2,11 @@
 @import 'buttons.css';
 @import 'recipe.css';
 @import 'ingredient-list.css';
+@import 'recipe-edit.css';
 
+* {
+    box-sizing: border-box;
+}
 
 html{
     font-size: 20px;
